Added some style, man

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,4 +1,94 @@
-.controls img
-  height: 100px
-  width: 100px
+body
+  font-size: 12px
+
+.footer
+  padding-top: 10px
+  border-top: solid 1px #dddddd
+  text-align: center
+
+.logo-image
+  width: 75px
+//  height: 100px
+
+.splash-logo
+  position: absolute
+  left: 40%
+  top: 40%
+
+.splash-text
+  position: relative
+  color: white
+  font-family: "Helvetica Neue", "Arial", sans-serif
+
+
+.header
+  border-bottom: solid 1px #dddddd
+
+#map-canvas
+  height: 100%
+  width: 100%
+//margin: 5px 0
+
+#map-canvas img
+  max-width: none
+  height: auto
+
+.field-header
+  font-weight: 700
+
+.field-small-header
+  font-weight: 700
+  font-size: 12px
+
+.input-box
+  width: 98%
+
+.input-box-textarea
+  width: 98%
+  height: 50px
+
+.info-panel
+  padding: 5px 10px
+  height: 385px
+  background: #f8f8f8
+
+.info-panel-header
+  font-size: 16px
+  text-align: center
+  padding: 5px
+
+.input-container
+  padding: 5px 10px
+
+.content
+  margin: 10px 0
+
+.field-content
+  margin: 5px 0
+
+.text-search-button
   float: left
+
+.text-search-text
+  float: left
+  margin-top: 8px
+  margin-left: 10px
+  width: 470px
+
+.loading
+  display: none
+
+video#clouds
+  position: fixed
+  top: 50%
+  left: 50%
+  min-height: 100%
+  min-width: 100%
+  width: auto
+  height: auto
+  z-index: -100
+  -ms-transform: translateX(-50%) translateY(-50%)
+  -moz-transform: translateX(-50%) translateY(-50%)
+  -webkit-transform: translateX(-50%) translateY(-50%)
+  transform: translateX(-50%) translateY(-50%)
+
