--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -3,29 +3,27 @@ body
 
 .footer
   padding-top: 10px
-  border-top: solid 1px #dddddd
   text-align: center
-
-.logo-image
-  width: 75px
-//  height: 100px
 
 .splash-logo
   position: absolute
-  left: 40%
-  top: 40%
+  left: 25%
+  top: 30%
+
+  img
+    margin-left: 20%
 
 .splash-text
   position: relative
   color: white
   font-family: "Helvetica Neue", "Arial", sans-serif
 
+.logo-image
+  width: 75px
 
-.header
-  border-bottom: solid 1px #dddddd
 
 #map-canvas
-  height: 100%
+  height: 100vh
   width: 100%
 //margin: 5px 0
 
