--- a/app/views/main/map.html.haml
+++ b/app/views/main/map.html.haml
@@ -24,6 +24,10 @@
             Goryn
           %option{:value => 'south_bug'}
             South Bug
+          %option{:value => 'vistula'}
+            Vistula
+          %option{:value => 'danube'}
+            Danube
       .clear
   %button.btn.btn-large#run-model
     Run model
